Update comment and documentation
